--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = {}
 [package]
 edition = "2021"
 name = "rust-ssq"
@@ -6,4 +7,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4"
+digest = "0.9"
 rand = "0.8.4"
+sha2 = "0.9"
